--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,14 +12,19 @@ on:
 jobs:
 
   test:
-    runs-on: ubuntu-latest 
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        go_version: ['1.18', '1.17', '>=1.18']
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+    
     steps: 
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.19
+        go-version: ${{ matrix.go_version }}
       
     - name: Build-image-db
       run: docker-compose build
