--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,11 +12,10 @@ on:
 jobs:
 
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest 
     strategy:
       matrix:
         go_version: ['1.18', '1.17', '>=1.18']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps: 
     - uses: actions/checkout@v3
