--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,17 +5,18 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "*" ]
 
 jobs:
 
   test:
-    runs-on: ubuntu-latest 
+    runs-on: ${{ matrix.os }} 
     strategy:
       matrix:
         go_version: ['1.18', '1.17', '>=1.18']
+        os: ['ubuntu-latest', 'ubuntu-18.02']
     
     steps: 
     - uses: actions/checkout@v3
@@ -36,7 +37,10 @@ jobs:
 
   build:
     needs: test
-    runs-on: ubuntu-latest 
+    runs-on: ${{ matrix.os }} 
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'ubuntu-18.02']
     steps: 
     - uses: actions/checkout@v3
 
