--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         go_version: ['1.18', '1.17', '>=1.18']
-        os: ['ubuntu-latest', 'ubuntu-18.02']
+        os: ['ubuntu-latest', 'ubuntu-18.04']
     
     steps: 
     - uses: actions/checkout@v3
@@ -46,10 +46,14 @@ jobs:
     runs-on: ${{ matrix.os }} 
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'ubuntu-18.02']
+        os: ['ubuntu-latest', 'ubuntu-18.04']
     steps: 
     - uses: actions/checkout@v3
 
     - name: Build
       run: go build -v main.go
-    
+
+  docker:
+    needs: build
+    uses: ./.github/worksflows/docker.yml
+    secrets: inherit
