corrigindo erros de sintaxe no codigo

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -55,5 +55,5 @@ jobs:
 
   docker:
     needs: build
-    uses: ./.github/worksflows/docker.yml
+    uses: ./.github/workflows/docker.yml
     secrets: inherit
