--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,3 +19,12 @@ jobs:
       with:  
         username: thifelipesilva
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: thifelipesilva/api_go_ci:${{ github.ref_name }}
