--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,12 @@ jobs:
     - name: setup Docker Build
       uses: docker/setup-buildx-action@v2.0.0
 
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v3.0.0
+      with:
+        # Artifact name
+        name: main_api_go
+
   
     - name: Docker Login
       uses: docker/login-action@v2.1.0
