--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,11 +49,11 @@ jobs:
     - name: Build
       run: go build -v main.go
 
-    - name: Upload a Build Artifact
+    - name: Upload a Build Artifact - arquivo main do build da api
       uses: actions/upload-artifact@v3.1.0
       with:
         # Artifact name
-        name: programa
+        name: main_api_go
         # A file, directory or wildcard pattern that describes what to upload
         path: main
 
