--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,7 +43,7 @@ jobs:
 
   build:
     needs: test
-    run-on: 'ubuntu-latest'
+    runs-on: 'ubuntu-latest'
     steps: 
     - uses: actions/checkout@v3
     - name: Build
